--- a/app/src/main/res/layout/layout_feature_bug_dialog.xml
+++ b/app/src/main/res/layout/layout_feature_bug_dialog.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:layout_margin="20dp"
-    android:weightSum="1">
+    android:padding="20dp"
+    android:weightSum="1"
+    android:background="#fff">
 
     <LinearLayout
         android:id="@+id/feature_request"
@@ -13,11 +15,13 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_weight="0.5"
-        android:gravity="center">
+        android:gravity="center"
+        android:focusable="true"
+        android:clickable="true">
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_note_add_black_24dp"/>
+            android:src="@drawable/new_feature_icon"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,6 +29,7 @@
             android:textStyle="bold"
             android:textColor="#000"
             android:textSize="18sp"
+            android:layout_marginTop="10dp"
             android:text="Feature Request"/>
     </LinearLayout>
 
@@ -35,11 +40,13 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_weight="0.5"
-        android:gravity="center">
+        android:gravity="center"
+        android:focusable="true"
+        android:clickable="true">
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_bug_report_black_24dp"/>
+            android:src="@drawable/bug_report_icon"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,6 +54,7 @@
             android:textStyle="bold"
             android:textColor="#000"
             android:textSize="18sp"
+            android:layout_marginTop="10dp"
             android:text="Bug Report"/>
     </LinearLayout>
 
